- MultiSelect: added ImGuiMultiSelectFlags_NoSelectOnRightClick to disable default
  right-click processing, which selects item on mouse down and is designed for
  context-menus. (#8200, #9015)
- Backends: GLFW: fixed building on Linux platforms where Wayland headers
  are not available. (#9024, #8969, #8921, #8920) [@jagot] 
- Backends: Vulkan: added IMGUI_IMPL_VULKAN_VOLK_FILENAME to configure path to
  Volk (default to "volk.h"). (#9008, #7722, #6582, #4854) [@mwlasiuk]
- Backends: WebGPU: update to compile with Dawn and Emscripten's 4.0.10+
  '--use-port=emdawnwebgpu' ports. (#8381, #8898) [@brutpitt, @trbabb]
  When using Emscripten 4.0.10+, backend now defaults to IMGUI_IMPL_WEBGPU_BACKEND_DAWN
  instead of IMGUI_IMPL_WEBGPU_BACKEND_WGPU, if neither are specified.
  (note: examples application were not updated yet)


-----------------------------------------------------------------------
 VERSION 1.92.4 (Released 2025-10-14)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.4

Breaking Changes:

- Backends:
  - TreeNode, Selectable, Clipper: commented out legacy names obsoleted in
    1.89.7 (July 2023) and 1.89.9 (Sept 2023):
      ImGuiTreeNodeFlags_AllowItemOverlap       --> ImGuiTreeNodeFlags_AllowOverlap
      ImGuiSelectableFlags_AllowItemOverlap     --> ImGuiSelectableFlags_AllowOverlap
      ImGuiListClipper::IncludeRangeByIndices() --> ImGuiListClipper::IncludeItemsByIndex()
  - Vulkan: moved some fields in ImGui_ImplVulkan_InitInfo:
      init_info.RenderPass  --> init_info.PipelineInfoMain.RenderPass
      init_info.Subpass     --> init_info.PipelineInfoMain.Subpass
      init_info.MSAASamples --> init_info.PipelineInfoMain.MSAASamples
      init_info.PipelineRenderingCreateInfo --> init_info.PipelineInfoMain.PipelineRenderingCreateInfo
    It makes things more consistent and was desirable to introduce new settings for